--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,17 +79,17 @@ LastSize=(X=0,Y=0)
 
 [MRU]
 MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/ForestBackup
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/Bubbleopolis
-MRUItem4=/Game/Levels/Blue_paint
-MRUItem5=/Game/Levels/testYellow
-MRUItem6=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem7=/Game/Levels/RedTesting
-MRUItem8=/Game/Levels/TechDemo
-MRUItem9=/Game/Levels/testRed
-MRUItem10=/Game/Levels/testMagenta
-MRUItem11=/Game/Levels/testGreen
+MRUItem1=/Game/Levels/RedTesting
+MRUItem2=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem3=/Game/Levels/testGreen
+MRUItem4=/Game/Levels/TechDemo
+MRUItem5=/Game/Levels/ForestBackup
+MRUItem6=/Game/Levels/MainMenu
+MRUItem7=/Game/Levels/Bubbleopolis
+MRUItem8=/Game/Levels/Blue_paint
+MRUItem9=/Game/Levels/testYellow
+MRUItem10=/Game/Levels/testRed
+MRUItem11=/Game/Levels/testMagenta
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
@@ -242,6 +242,16 @@ TargetPoint=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Colli
 Duck_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 PlayerStart=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 PropertyWrapper=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Rendering.TextureStreaming,SphereComponent.Rendering.LOD,
+BrushComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+Brush=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+GooglePADRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+MagicLeapARPinSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -272,7 +282,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3/SoapHouse3V1
 ContentBrowserTab1.SelectedPaths=/Game/Stairs/Stair_Textures
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3
-ContentBrowserTab1.SelectedPaths=/Game/Duck
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 None=======
 None=======
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -315,7 +325,7 @@ LastLevel=/Game/Levels/Forest
 LastLevel=/Game/Levels/MainMenu
 LastLevel=/Game/Levels/TowerInterior
 LastLevel=/Game/Levels/MainMenu
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Forest
 None=======
 None=======
 None=======
@@ -324,26 +334,26 @@ None=======
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Duck/duck_walk_Animation_Anim
-MRUItem1=/Game/Duck/Duck_Blend
-MRUItem2=/Game/Duck/Duck_Ani
-MRUItem3=/Game/Duck/Duck
-MRUItem4=/Game/Gnome_Animated/ChefGnome/Chef_Blend
-MRUItem5=/Game/Gnome_Animated/ChefGnome/Chef_Ani
-MRUItem6=/Game/Levels/Forest
-MRUItem7=/Game/Levels/ForestBackup
-MRUItem8=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem9=/Game/Levels/Bubbleopolis
-MRUItem10=/Game/Blueprints/Staircase
-MRUItem11=/Game/Blueprints/StaircaseBP
-MRUItem12=/Game/Materials/Mat_Stairs
-MRUItem13=/Game/Blueprints/AOE_Decal
-MRUItem14=/Game/Blueprints/AO1E
-MRUItem15=/Game/Blueprints/UI/HUD
-MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem17=/Game/Levels/Blue_paint
-MRUItem18=/Game/Levels/testYellow
-MRUItem19=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Levels/RedTesting
+MRUItem3=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem4=/Game/Levels/testGreen
+MRUItem5=/Game/Levels/TechDemo
+MRUItem6=/Game/Player/PlayerCharacter
+MRUItem7=/Game/Duck/duck_walk_Animation_Anim
+MRUItem8=/Game/Duck/Duck_Blend
+MRUItem9=/Game/Duck/Duck_Ani
+MRUItem10=/Game/Duck/Duck
+MRUItem11=/Game/Gnome_Animated/ChefGnome/Chef_Blend
+MRUItem12=/Game/Gnome_Animated/ChefGnome/Chef_Ani
+MRUItem13=/Game/Levels/ForestBackup
+MRUItem14=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem15=/Game/Levels/Bubbleopolis
+MRUItem16=/Game/Blueprints/Staircase
+MRUItem17=/Game/Blueprints/StaircaseBP
+MRUItem18=/Game/Materials/Mat_Stairs
+MRUItem19=/Game/Blueprints/AOE_Decal
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -2893,9 +2903,51 @@ AnimGraphNode_TransitionResult.Result=True
 TargetPoint.Navigation=True
 TargetPoint.ArrowComponent=True
 Duck_Ani_C.Default=True
+SpringArmComponent.ComponentTick=True
+CameraComponent.ComponentTick=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+AISystem.Blackboard=True
+AnimationSettings.CustomAttributes=True
+AudioSettings.Mix=True
+InputSettings.DefaultClasses=True
+RendererSettings.Skinning=True
+RendererSettings.PostProcessCalibrationMaterials=True
+StreamingSettings.Deprecated Settings=True
+BlueprintEditorProjectSettings.Experimental=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Misc=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Misc=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Packaging=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+GooglePADRuntimeSettings.Packaging=True
+MagicLeapARPinSettings.ARPin=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Scalability=True
+NiagaraSettings.Renderer=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+SteamVREditorSettings.SteamVR Input=True
+SteamVREditorSettings.SteamVR Editor Settings=True
+UdpMessagingSettings.Availability=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Navigation=True
+ChildActorComponent.ComponentTick=True
+AudioComponent.ComponentTick=True
+AudioComponent.Randomization=True
 
 [DetailPropertyExpansion]
-Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2904,7 +2956,7 @@ MeshComponent=
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent=
 SceneComponent=
@@ -2915,7 +2967,7 @@ Object=
 Object=
 Object="\"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 None=======
 None=======
 None=======
@@ -2927,7 +2979,7 @@ SphereComponent=
 SphereComponent=
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent=
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
@@ -2948,8 +3000,8 @@ StreamableRenderAsset="\"Object.ImportSettings.AssetImportData.Object.Transform.
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportTranslation\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 ThirdPersonCharacter_C=
-Character="\"Object.Default.Destinations\" "
-Pawn="\"Object.Default.Destinations\" "
+Character=
+Pawn=
 Texture2D="\"Object.Texture.PaddingColor\" "
 Texture="\"Object.Texture.PaddingColor\" "
 Forest_C=
@@ -3008,7 +3060,7 @@ Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Re
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[20]\" "
 ProjectileMovementComponent=
 MovementComponent=
-ArrowComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ArrowComponent=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[0]\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[1]\" "
 ParticleModuleColor="\"Object.Color.StartColor\" \"Object.Color.StartColor.Distribution\" \"Object.Color.StartColor.Distribution.Object.ConstantCurve.Points\" \"Object.Color.StartAlpha.Distribution\" "
 ParticleModuleVelocityOverLifetime="\"Object.Velocity.VelOverLife\" \"Object.Velocity.VelOverLife.Distribution\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
@@ -3026,7 +3078,7 @@ Settings_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Objec
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Slider="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Pause_C=
-CapsuleComponent=
+CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditableText="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 DialogueWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3451,7 +3503,7 @@ bShowCompilerLogOnCompileError=False
 DataSourceFolder=(Path="")
 bAnimationReimportWarnings=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=1
+SCSViewportCameraSpeed=3
 AssetViewerProfileName=
 MaterialQualityLevel=1
 PreviewFeatureLevel=3
@@ -4256,7 +4308,7 @@ MeshBuilder.TimeStamp=2021.02.06-01.28.04
 MeshBuilder.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2021.01.24-20.19.27
 HierarchicalLODUtilities.LastCompileMethod=External
-ExternalImagePicker.TimeStamp=2021.01.24-20.19.26
+ExternalImagePicker.TimeStamp=2021.02.06-01.28.03
 ExternalImagePicker.LastCompileMethod=External
 LauncherServices.TimeStamp=2021.01.24-20.19.28
 LauncherServices.LastCompileMethod=External
@@ -4427,7 +4479,7 @@ ExtrudeCoordsWarning=False
 Warning_EditingDefaultMaterial=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -4486,6 +4538,7 @@ DirectionalLight.CascadedShadowMaps=True
 SkyLight.Actor=True
 WorldSettings.Lightmass=True
 Duck_C.Animation=True
+CapsuleComponent.Shape=True
 
 [MaterialEditor]
 PrimType=1
@@ -4936,4 +4989,10 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[DetailMultiObjectNodeExpansion]
+CryptoKeysSettings=True
+GeneralProjectSettings=True
+GameplayTagsSettings=True
+GameMapsSettings=True
 
