--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,16 +76,17 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 LastSize=(X=0,Y=0)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/RedTesting
-MRUItem2=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem3=/Game/Levels/testGreen
-MRUItem4=/Game/Levels/TechDemo
-MRUItem5=/Game/Levels/ForestBackup
-MRUItem6=/Game/Levels/MainMenu
-MRUItem7=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/RedTesting
+MRUItem3=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem4=/Game/Levels/testGreen
+MRUItem5=/Game/Levels/TechDemo
+MRUItem6=/Game/Levels/ForestBackup
+MRUItem7=/Game/Levels/MainMenu
 MRUItem8=/Game/Levels/Blue_paint
 MRUItem9=/Game/Levels/testYellow
 MRUItem10=/Game/Levels/testRed
@@ -162,7 +163,7 @@ K2Node_VariableSet=StaticMeshComponent.Collision.Collision,BoxComponent.Collisio
 IntProperty=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 AOE_Decal_C=
 DecalComponent=StaticMeshComponent.Collision.Collision,
-SceneComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+SceneComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 FbxExportOption=
 CableComponent=StaticMeshComponent.Collision.Collision,
 ObjectProperty=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
@@ -206,7 +207,7 @@ Gnome_Fall_C=
 Mush_Ani_C=
 Spring_Ani_C=
 Winter_Ani_C=
-PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,
+PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 SceneFinish_Actor_C=
 testYellow_C=
 ProjectileMovementComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,
@@ -237,12 +238,12 @@ StreetlampBP_C=
 TestLevels_C=
 UserDefinedStruct=
 Duck_Ani_C=
-CapsuleComponent=
+CapsuleComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 TargetPoint=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 Duck_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 PlayerStart=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 PropertyWrapper=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Rendering.TextureStreaming,SphereComponent.Rendering.LOD,
-BrushComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+BrushComponent=
 Brush=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
@@ -252,11 +253,13 @@ NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSetti
 NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+Player_BP_C=
+InstancedFoliageActor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.184780
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.815225
@@ -282,7 +285,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3/SoapHouse3V1
 ContentBrowserTab1.SelectedPaths=/Game/Stairs/Stair_Textures
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=
 None=======
 None=======
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -325,35 +328,36 @@ LastLevel=/Game/Levels/Forest
 LastLevel=/Game/Levels/MainMenu
 LastLevel=/Game/Levels/TowerInterior
 LastLevel=/Game/Levels/MainMenu
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 None=======
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Levels/RedTesting
-MRUItem3=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem4=/Game/Levels/testGreen
-MRUItem5=/Game/Levels/TechDemo
-MRUItem6=/Game/Player/PlayerCharacter
-MRUItem7=/Game/Duck/duck_walk_Animation_Anim
-MRUItem8=/Game/Duck/Duck_Blend
-MRUItem9=/Game/Duck/Duck_Ani
-MRUItem10=/Game/Duck/Duck
-MRUItem11=/Game/Gnome_Animated/ChefGnome/Chef_Blend
-MRUItem12=/Game/Gnome_Animated/ChefGnome/Chef_Ani
-MRUItem13=/Game/Levels/ForestBackup
-MRUItem14=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem15=/Game/Levels/Bubbleopolis
-MRUItem16=/Game/Blueprints/Staircase
-MRUItem17=/Game/Blueprints/StaircaseBP
-MRUItem18=/Game/Materials/Mat_Stairs
-MRUItem19=/Game/Blueprints/AOE_Decal
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Materials/Mat_ToonShade
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/Player/Player_BP
+MRUItem5=/Game/Player/PlayerCharacter
+MRUItem6=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem7=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem8=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem9=/Game/Levels/RedTesting
+MRUItem10=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem11=/Game/Levels/testGreen
+MRUItem12=/Game/Levels/TechDemo
+MRUItem13=/Game/Duck/duck_walk_Animation_Anim
+MRUItem14=/Game/Duck/Duck_Blend
+MRUItem15=/Game/Duck/Duck_Ani
+MRUItem16=/Game/Duck/Duck
+MRUItem17=/Game/Gnome_Animated/ChefGnome/Chef_Blend
+MRUItem18=/Game/Gnome_Animated/ChefGnome/Chef_Ani
+MRUItem19=/Game/Levels/ForestBackup
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -2945,9 +2949,14 @@ ArrowComponent.Navigation=True
 ChildActorComponent.ComponentTick=True
 AudioComponent.ComponentTick=True
 AudioComponent.Randomization=True
+Player_BP_C.Default=True
+Player_BP_C.RootMotion=True
+Player_BP_C.Notifies=True
+PreviewMaterial.PhysicalMaterialMask=True
+StaticMeshActor.Navigation=True
 
 [DetailPropertyExpansion]
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2956,7 +2965,7 @@ MeshComponent=
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent=
 SceneComponent=
@@ -2979,7 +2988,7 @@ SphereComponent=
 SphereComponent=
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent=
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent=
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
@@ -3078,7 +3087,7 @@ Settings_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Objec
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Slider="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Pause_C=
-CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+CapsuleComponent=
 EditableText="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 DialogueWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -4250,7 +4259,7 @@ LevelSequenceEditor.TimeStamp=2021.02.06-01.29.56
 LevelSequenceEditor.LastCompileMethod=External
 PlacementMode.TimeStamp=2021.02.06-01.28.05
 PlacementMode.LastCompileMethod=External
-MaterialEditor.TimeStamp=2021.01.24-20.19.28
+MaterialEditor.TimeStamp=2021.02.06-01.28.04
 MaterialEditor.LastCompileMethod=External
 MatineeToLevelSequence.TimeStamp=2021.02.06-01.29.56
 MatineeToLevelSequence.LastCompileMethod=External
@@ -4479,7 +4488,7 @@ ExtrudeCoordsWarning=False
 Warning_EditingDefaultMaterial=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -4595,6 +4604,8 @@ bPlatformUsed[47]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[3]=0
 
 [SelectionDetails]
 DecalSize_PreserveScaleRatio=False
