--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/Game.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/Game.ini
@@ -2,6 +2,8 @@
 Build=IfProjectHasCode
 BuildTarget=
 StagingDirectory=(Path="D:/Build")
+StagingDirectory=(Path="C:/Users/crono/Desktop")
+None=======
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
