--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/SourceControlSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/SourceControlSettings.ini
@@ -2,6 +2,7 @@
 Provider=None
 Provider=Git
 None=======
+None=======
 
 [SubversionSourceControl.SubversionSourceControlSettings]
 Repository="https://18.216.236.46:443/svn/Serotopia/"
