--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/Engine.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/Engine.ini
@@ -46,7 +46,17 @@ TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/TimeOfDay.TimeOfDay"',Map="/Engine/Maps/Templates/TimeOfDay_Default")
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/VR-Basic.VR-Basic"',Map="/Engine/Maps/Templates/VR-Basic")
 DisplayGamma=2.356511
+DisplayGamma=2.000000
+None=======
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
