--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ Advanced=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -184,15 +184,17 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/AOE/Projectile/AO1E.AO1E
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Mat_CloudDeck
-MRUItem1=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/Materials/Materials/Mat_Leaves
-MRUItem4=/Game/Bridge/materials/lambert2
-MRUItem5=/Game/Bridge/Blueprints/DisappearBridge
-MRUItem6=/Game/Levels/Forest
+MRUItem0=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Materials/Mat_CloudDeck
+MRUItem4=/Game/Materials/Materials/Mat_Leaves
+MRUItem5=/Game/Bridge/materials/lambert2
+MRUItem6=/Game/Bridge/Blueprints/DisappearBridge
 MRUItem7=/Game/bubble_Street_Lights/Bluprint/StreetlampBP
 MRUItem8=/Game/Materials/Mat_Water
 MRUItem9=/Game/Materials/Mat_Water_Inst
